# reinforcenow-cli

./: .env  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  pyproject.toml  tox.ini
.claude/: CLAUDE.md
.claude/skills/dockerfile/: SKILL.md
.claude/skills/off-policy-distillation/: convert_rollouts.py
.claude/skills/on-policy-distillation/: SKILL.md
.claude/skills/rnow-cli/: SKILL.md
.claude/skills/rnow-config/: SKILL.md
.claude/skills/rnow-dataset/: SKILL.md
.claude/skills/rnow-rewards/: SKILL.md
.claude/skills/rnow-tools/: SKILL.md
.claude/skills/rnow-train-jsonl/: SKILL.md
.github/workflows/: publish.yml  test.yml
project8/: CLAUDE.md  README.md  config.yml
reinforcenow/: auth.py  cli.py  models.py  test_runner.py
reinforcenow/cli/: auth.py  commands.py  common.py  main.py
reinforcenow/core/: __init__.py  env.py  reward.py  tool.py
reinforcenow/templates/new/: config.json  config.yml  rewards.py
reinforcenow/templates/rl-multi/: config.yml  train.jsonl
reinforcenow/templates/rl-single/: config.yml  train.jsonl
reinforcenow/templates/rl-tools/: config.yml  train.jsonl
reinforcenow/templates/sft/: config.yml  train.jsonl
reinforcenow/templates/start/: config.json  config.yml  reward_function.py
rnow/: __init__.py  __main__.py  models.py
rnow/cli/: __init__.py  auth.py  blob.py  commands.py  common.py  cube.py  eval.py  main.py  test.py  token_count.py  upload.py
rnow/core/: __init__.py  env.py  llm_judge.py  reward.py  tool.py
rnow/skills/dockerfile/: SKILL.md
rnow/skills/rnow-cli/: SKILL.md
(+160 files in other folders)
