[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["rnow*"]

[tool.setuptools.package-data]
rnow = ["templates/*", "templates/start/*", "templates/new/*", "templates/**/*"]

[project]
name = "rnow"
version = "0.9.5"
description = "ReinforceNow CLI - Reinforcement Learning platform command-line interface"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0.0",
    "requests>=2.25.0",
    "pydantic>=1.8.0",
    "pyyaml>=5.4.0",
    "tinker>=0.2.2",
]

[project.optional-dependencies]
api = ["fastapi>=0.68.0", "uvicorn>=0.15.0"]
test = ["openai>=1.0.0", "tqdm>=4.60.0"]
all = ["fastapi>=0.68.0", "uvicorn>=0.15.0", "openai>=1.0.0", "tqdm>=4.60.0"]

[project.scripts]
rnow = "rnow.cli.main:main"
